# Rust-Blog-Src

./: Cargo.toml  cargo.toml
content/posts1/: post1.json
src/: main.rs
templates/: base.html.tera  index.html.tera  post.html.tera
