[package]
name = "rust-japanese-blog"
version = "0.2.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
pulldown-cmark = "0.9.1"
regex = "1.5.4"
